# futaba-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.py
src/: __init__.py
src/accel/: __init__.py  bvh.cuh  bvh.py  optix_bvh.cu
src/bsdfs/: __init__.py  bsdf.py  bsdf_sample.cuh  dielectric.cuh  diffuse.cuh  microfacet.cuh  mirror.cuh  roughconductor.cuh  roughdielectric.cuh  roughplastic.cuh
src/core/: __init__.py  common.cuh  frame.py  ray.cuh  ray.py  types.cuh  types.py
src/emitter/: area.cuh
src/emitters/: area.h  emitter.h  envmap.cuh
src/films/: __init__.py  bitmap.cpp  bitmap.h  hdrfilm.cuh  hdrfilm.py
src/frame/: bitmap.cuh  block.cuh  frame.cuh
src/gui/: gui.cpp  gui.h  launch_params.h  renderer.h  renderer_device.cu  renderer_host.cpp  tonemapping.cuh
src/integrator/: albedo.cuh  depth.cuh  heatmap.cuh  normals.cuh  path.cuh  phong.cuh  primitives.cuh  surface_interaction.cuh  volpath.cuh
src/integrators/: __init__.py  normals.py  path.py  surface_interaction.py
src/materials/: material.cuh
src/parser/: emitter_builders.h  material_builders.h  proplist.h  scene_loader.cpp  scene_loader.h
src/render/: __init__.py  renderer.py
src/sampler/: sampler.cuh  warp.cuh
src/samplers/: __init__.py  distribution.py  sampler.py  warp.py
src/scene/: __init__.py  scene.cuh  scene.py
src/sensors/: __init__.py  perspective.cuh  sensor.py
src/shapes/: __init__.py  emitter.cuh  mesh.py  shape.cuh  shape.py  sphere.cuh  sphere.py  triangle.cuh  triangle.py
